# vggt-omega

./: .gitignore  demo_gradio.py  justfile  pyproject.toml
scripts/: visualize.py
tests/: conftest.py  test_cli.py  test_geometry.py  test_inference.py  test_load_fn.py  test_pipeline.py  test_pose_enc.py  test_preprocess.py  test_rotation.py  test_visual_util.py  test_visualize.py  test_visualize_script.py
vggt_omega/: __init__.py  cli.py  inference.py  pipeline.py  preprocess.py  visualize.py
vggt_omega/models/: aggregator.py  vggt_omega.py
vggt_omega/models/heads/: dense_head.py
vggt_omega/models/layers/: attention.py  block.py  ffn_layers.py  patch_embed.py  utils.py  vision_transformer.py
vggt_omega/utils/: geometry.py  pose_enc.py  rotation.py
